# masters_thesis

./: .bash_history  .bashrc  .gitignore  Makefile  README.md  README.txt  e --edit-todo  improvements.md
scripts/: IridiumTle.txt  StarlinkTle.txt  calculateBeamRadius.py  findSuitableSatellite.py  pyproject.toml  time_sort_csv.py  update_net_xml.py  update_nod_xml.py
scripts/conversions/: conversion_doc.txt  conversions.ipynb
scripts/keplertraces/: before_median_start_time.ipynb  config_template.txt  create_traces.py  keplerinputs.py  parseomnetini.py  tlefetch.py  tlefilter.py  tleparse.py  tletimes.py  updateomnetini.py
scripts/plots/: diff_differences.py  parse_coords_file.py  plot_aligned_sop_stats_at_offset.py  plot_anglegroup_sop_stats_at_offset.py  plot_available_sats_diffs.py  plot_average_differences.py  plot_comm_comparison.py  plot_compare_topocentr.R  plot_const_aligned_sop_stats_at_offset.py  plot_const_anglegrouped_sop_stat_diffs.py  plot_const_comm_periods.py  plot_const_diff_extrema_positions.py  plot_const_overlap_stats.py  plot_const_period_zenith_shifts.py  plot_constellation_properties.py  plot_difference_distributions.py  plot_differences.py  plot_differences_both.py  plot_differences_ecdf.py  plot_dists.py  plot_orbs.py  plot_orekit_comparison_histogram.py  plot_sat_period_zenith_shifts.py  plot_sop_stat_differences.py  plot_sop_stats.py  plot_zenith_interval_diff_at_offset.py  plot_zenith_interval_diff_to_offset_diff.py  plot_zenith_interval_diff_to_offset_stat.py  positional_differences.py  satname_to_modname.py  sop_stats.py  test.ipynb  (+1 more)
(+380 files in other folders)
